# ros2-lidar-project

./: README.md  lidar_dataset.csv  move_decision.py
database/: schema.sql
publisher/: parse_lidar_data.py
src/my_robot_pkg/: package.xml  setup.cfg  setup.py
src/my_robot_pkg/launch/: my_launch.py
src/my_robot_pkg/my_robot_pkg/: lidar_publisher.py
